fix passage options checkbox alignment (#357)

--- a/step-web/src/main/webapp/scss/passage_options.scss
+++ b/step-web/src/main/webapp/scss/passage_options.scss
@@ -61,7 +61,7 @@
   }
 
   .dropdown-menu {
-    min-width: 180px;
+    min-width: max-content;
     padding-top: 0;
 
     h2 {
